--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
     <script type="text/javascript" src="scripts/main.js"></script>
+    <header class="page__section header">
+      <div class="container">
+        <div class="header__content">
+          <div class="header__top">
+            <a 
+            href="#menu" 
+            class="icon icon--menu">
+            </a>
+
+            <a href="#" class="logo">
+              <img 
+                class="logo__image"
+                src="./images/logo/NA MUlogo.png" 
+                alt="Museum logo">
+            </a>
+          </div>
+
+          <div class="header__museum">
+
+          </div>
+        </div>
+      </div>
+    </header>
   </body>
 </html>
