--- a/src/index.html
+++ b/src/index.html
@@ -110,7 +110,7 @@
 
           <div class="promo__button">
             <a
-              href="#"
+              href="#ticket"
               class="promo__link"
             >
               Квитки
@@ -382,7 +382,7 @@
                   <h3 class="info__title">
                     Вихідні:
                   </h3>
-                  <p>понеділок, вівторок.<br><br>
+                  <p id="ticket">понеділок, вівторок.<br><br>
                     Каса припиняє роботу за 1 годину
                     до закриття музею
                   </p>
@@ -393,7 +393,10 @@
                   Контакти:
                 </h3>
                 <div class="info__text">
-                  <a class="info__link" href="https://www.google.com/maps/place/%D0%9D%D0%B0%D1%86%D1%96%D0%BE%D0%BD%D0%B0%D0%BB%D1%8C%D0%BD%D0%B8%D0%B9+%D1%85%D1%83%D0%B4%D0%BE%D0%B6%D0%BD%D1%96%D0%B9+%D0%BC%D1%83%D0%B7%D0%B5%D0%B9+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%B8/@50.4493621,30.5298855,17.76z/data=!4m5!3m4!1s0x40d4ce524453048d:0x549e3a34119f524f!8m2!3d50.4494274!4d30.5306505">
+                  <a 
+                    target="_blank"
+                    class="info__link"
+                    href="https://www.google.com/maps/place/%D0%9D%D0%B0%D1%86%D1%96%D0%BE%D0%BD%D0%B0%D0%BB%D1%8C%D0%BD%D0%B8%D0%B9+%D1%85%D1%83%D0%B4%D0%BE%D0%B6%D0%BD%D1%96%D0%B9+%D0%BC%D1%83%D0%B7%D0%B5%D0%B9+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%B8/@50.4493621,30.5298855,17.76z/data=!4m5!3m4!1s0x40d4ce524453048d:0x549e3a34119f524f!8m2!3d50.4494274!4d30.5306505">
                     вул. М. Грушевського, 6<br>
                     Київ, 01001
                   </a>
@@ -483,7 +486,7 @@
             Designed by Zhyriada Marina
           </p>
           <p class="copyright__text">
-            Copyright © 2021. All Rights Reserved
+            Copyright © 2022. All Rights Reserved
           </p>
         </div>
       </div>
