--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
+    <link rel="icon" href="./images/logo/NA MUlogo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -14,7 +15,7 @@
   </head>
   <body class="page__body">
     <script type="text/javascript" src="scripts/main.js"></script>
-    <header class="page__section header">
+    <header class="page__section header" hidden>
       <div class="container">
         <div class="header__content">
           <div class="header__top">
@@ -31,11 +32,47 @@
             </a>
           </div>
 
-          <div class="header__museum">
+          <div class="header__museum museum">
+            <div class="museum__photo"></div>
 
+            <div class="museum__tickets">
+              <div class="museum__title">
+                ХУДОЖНІЙ
+                <br>
+                МУЗЕЙ
+              </div>
+
+              <a href="#" class="museum__link">
+                <div class="museum__button">
+                  <div class="museum__ticket">КВИТКИ</div>
+                  <div class="museum__ticket-arrow"></div>
+                </div>
+              </a>
+            </div>
           </div>
         </div>
       </div>
     </header>
+
+    <nav class="page__menu menu">
+      <div class="container">
+        <div class="menu__content">
+          <div class="menu__items">
+            <a href="#" class="menu__icon icon icon--cross"></a>
+
+            <div class="menu__links">
+              <a href="" class="menu__link">Галерея</a>
+              <a href="" class="menu__link">Про Нас</a>
+              <a href="" class="menu__link">
+                Виставки 
+                <br>
+                та події
+              </a>
+              <a href="" class="menu__link">Контакти</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </nav>
   </body>
 </html>
