delete tag b from html

--- a/src/index.html
+++ b/src/index.html
@@ -108,19 +108,19 @@
 
             <div class="menu__info-box">
               <p class="menu__text menu__text--time">
-                <b>12:00— 20:00</b> середа
+                12:00— 20:00 середа
                 <br>
-                <b>12:00— 20:00</b> четвер
+                12:00— 20:00 четвер
                 <br>
-                <b>12:00— 20:00</b> п’ятниця
+                12:00— 20:00 п’ятниця
                 <br>
-                <b>11:00 — 19:00</b> субота
+                11:00 — 19:00 субота
                 <br>
-                <b>11:00 — 19:00</b> неділя
+                11:00 — 19:00 неділя
               </p>
 
               <p class="menu__text menu__text--info">
-                <b>Вихідні:</b> понеділок, вівторок
+                Вихідні: понеділок, вівторок
                 <br>
                 Каса припиняє роботу за 1 годину
                 <br>
@@ -460,15 +460,15 @@
                 </p>
 
                 <p class="footer__text">
-                  <b>12:00— 20:00</b> середа
+                  12:00— 20:00 середа
                   <br>
-                  <b>12:00— 20:00</b>  четвер
+                  12:00— 20:00  четвер
                   <br>
-                  <b>12:00— 20:00</b> п’ятниця
+                  12:00— 20:00 п’ятниця
                   <br>
-                  <b>11:00 — 19:00</b> субота
+                  11:00 — 19:00 субота
                   <br>
-                  <b>11:00 — 19:00</b> неділя
+                  11:00 — 19:00 неділя
                   <br><br>
                   Вихідні: понеділок, вівторок
                   <br>
