add label fon input

--- a/src/index.html
+++ b/src/index.html
@@ -379,7 +379,7 @@
                 method="#"
                 class="subscrib__input-box"
               >
-                <label for="#email">
+                <label for="#email" class="subscrib__input-box">
                   <input 
                     id="email"
                     type="email" 
@@ -387,7 +387,7 @@
                     autocomplete="off"
                     pattern="(\w\.?)+@[\w\.-]+\.\w{2,}"
                     placeholder="E-mail"
-                    class="subscrib__input"
+                    class="subscrib__input subscrib__input"
                   >
                 </label>
 
