add label fon input

--- a/src/index.html
+++ b/src/index.html
@@ -387,7 +387,7 @@
                     autocomplete="off"
                     pattern="(\w\.?)+@[\w\.-]+\.\w{2,}"
                     placeholder="E-mail"
-                    class="subscrib__input subscrib__input"
+                    class="subscrib__input"
                   >
                 </label>
 
