--- a/src/index.html
+++ b/src/index.html
@@ -9,13 +9,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body class="page__body">
     <script type="text/javascript" src="scripts/main.js"></script>
-    <header class="page__section header" hidden>
+    <header class="page__section header">
       <div class="container">
         <div class="header__content">
           <div class="header__top">
@@ -42,7 +42,7 @@
                 МУЗЕЙ
               </div>
 
-              <a href="#" class="museum__link">
+              <a href="#podii" class="museum__link">
                 <div class="museum__button">
                   <div class="museum__ticket">КВИТКИ</div>
                   <div class="museum__ticket-arrow"></div>
@@ -54,25 +54,293 @@
       </div>
     </header>
 
-    <nav class="page__menu menu">
+    <nav class="page__menu menu" id="menu">
       <div class="container">
         <div class="menu__content">
           <div class="menu__items">
             <a href="#" class="menu__icon icon icon--cross"></a>
 
             <div class="menu__links">
-              <a href="" class="menu__link">Галерея</a>
-              <a href="" class="menu__link">Про Нас</a>
-              <a href="" class="menu__link">
+              <a href="#gallery" class="menu__link">Галерея</a>
+              <a href="#subscribe" class="menu__link">Про Нас</a>
+              <a href="#podii" class="menu__link">
                 Виставки 
                 <br>
                 та події
               </a>
-              <a href="" class="menu__link">Контакти</a>
+              <a href="#contactus" class="menu__link">Контакти</a>
+            </div>
+          </div>
+
+          <div class="menu__grafik">
+            <h3 class="menu__grafik-title">
+              Графік роботи
+            </h3>
+
+            <div class="menu__grafik-blocks">
+              <div class="menu__rab">
+                12:00 — 20:00 середа
+                <br>
+                12:00 — 20:00 четвер
+                <br>
+                12:00 — 20:00 п’ятниця
+                <br>
+                11:00 — 19:00 субота
+                <br>
+                11:00 — 19:00 неділя
+              </div>
+
+              <div class="menu__vih">
+                Вихідні: понеділок, вівторок
+                <br>
+                Каса припиняє роботу за 1 годину
+                до закриття музею
+              </div>
             </div>
           </div>
         </div>
       </div>
     </nav>
+
+    <main>
+      <section class="podii" id="podii">
+        <div class="container">
+          <h2 class="podii__title">
+            Актуальні
+            події
+          </h2>
+
+          <div class="podii__block podii__block-1">
+            <div class="podii__photo-container">
+              <img 
+              src="./images/Photo/podij.png" alt="Photo_vistavka"
+              class="podii__photo">
+            </div>
+
+            <div class="podii__description">
+              <div class="podii__vistovka">
+                <div class="podii__vistovka-text">ВИСТАВКА</div>
+
+                <div class="podii__vistovka-date">26.08-29.11.2019</div>
+              </div>
+
+              <div class="podii__description-block">
+                <h3 class="podii__description-block-title">
+                  Йду і повертаюсь
+                </h3>
+
+                <div class="podii__description-block-text">
+                  Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="podii__block podii__block-2">
+            <div class="podii__photo-container">
+              <img 
+              src="./images/Photo/povertaj.png" alt="Photo_vistavka"
+              class="podii__photo">
+            </div>
+
+            <div class="podii__description">
+              <div class="podii__vistovka">
+                <div class="podii__vistovka-text">ВИСТАВКА</div>
+
+                <div class="podii__vistovka-date">26.08-29.11.2019</div>
+              </div>
+
+              <div class="podii__description-block">
+                <h3 class="podii__description-block-title">
+                  І спогади і мрії
+                </h3>
+
+                <div class="podii__description-block-text">
+                  Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="podii__block">
+            <div class="podii__photo-container">
+              <img 
+              src="./images/Photo/mriji.png" alt="Photo_vistavka"
+              class="podii__photo">
+            </div>
+
+            <div class="podii__description podii__description-last">
+              <div class="podii__vistovka podii__vistovka-last">
+                <div class="podii__vistovka-text">ЛЕКЦІЯ</div>
+
+                <div class="podii__vistovka-date">26/08/2019 - 11:00</div>
+              </div>
+
+              <div class="podii__description-block">
+                <h3 class="podii__description-block-title podii__description-block-title-last">
+                  Від класицизму до романтизму
+                </h3>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="gallery" id="gallery">
+        <div class="container">
+          <div class="gallery__title">Галерея</div>
+
+          <div class="gallery__photos">
+            <div class="gallery__photos-block1">
+              <div class="gallery__photo-container" id="photo1">
+                <img
+                src="./images/Gallery/photo1.png"
+                alt="photo1"
+                class="gallery__photo">
+              </div>
+              <div class="gallery__photo-container" id="photo2">
+                <img
+                src="./images/Gallery/photo2.png"
+                alt="photo2"
+                class="gallery__photo">
+              </div>
+            </div>
+
+            <div class="gallery__photos-block2">
+              <div class="gallery__photo-container" id="photo3">
+                <img
+                src="./images/Gallery/photo3.png"
+                alt="photo3"
+                class="gallery__photo">
+              </div>
+              <div class="gallery__photo-container" id="photo4">
+                <img
+                src="./images/Gallery/photo4.png"
+                alt="photo4"
+                class="gallery__photo">
+              </div>
+            </div>
+          </div>
+
+          <div class="gallery__photo-links">
+            <a href="#photo1" class="gallery__photo-link gallery__photo-link-1"></a>
+            <a href="#photo2" class="gallery__photo-link"></a>
+            <a href="#photo3" class="gallery__photo-link"></a>
+            <a href="#photo4" class="gallery__photo-link"></a>
+          </div>
+        </div>
+      </section>
+
+      <section class="subscribe" id="subscribe">
+        <div class="container">
+          <div class="subscribe__content">
+            <h3 class="subscribe__title">Підписка</h3>
+
+            <div class="subscribe__text">Бути в курсі всіх актуальних подій та останніх новин.</div>
+
+            <div class="subscribe__block">
+              <form 
+                action="info@namu.kiev.ua" 
+                method="get"
+                class="subscribe__form"
+                >
+                <input 
+                name="email"
+                type="email"
+                placeholder="E-mail"
+                class="subscribe__form-field"
+                required
+                >
+
+                <div class="subscribe__button">
+                  <button class="subscribe__button-arrow"></button>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer" id="contactus">
+      <div class="container">
+        <div class="footer__content">
+          <div class="footer__contactus">
+            <div class="footer__logos">
+              <a href="#" class="footer__logo">
+                <img
+                  class="footer__logo-image"
+                  src="./images/logo/NA MUlogo.png"
+                  alt="Museum logo">
+              </a>
+              <div class="footer__icons">
+                <a href="https://uk-ua.facebook.com/"
+                class="footer__icon-face"
+                target="_blank"></a>
+                <a href="https://www.instagram.com/"
+                class="footer__icon-insta"
+                target="_blank"></a>
+              </div>
+            </div>
+
+            <div class="footer__info">
+              <div class="footer__grafik">
+                <div class="footer__grafik-title">Графік роботи</div>
+
+                <div class="footer__grafik-text">
+                  12:00 — 20:00 середа
+                  <br>
+                  12:00 — 20:00 четвер
+                  <br>
+                  12:00 — 20:00 п’ятниця
+                  <br>
+                  11:00 — 19:00 субота
+                  <br>
+                  11:00 — 19:00 неділя
+                  <br>
+                  <br>
+                  Вихідні понеділок, вівторок
+                  Каса припиняє роботу за 1 годину
+                  до закриття музею
+                </div>
+              </div>
+
+              <div class="footer__contacts">
+                <div class="footer__contacts-title">Контакти:</div>
+
+                <div class="footer__contacts-text">вул. М. Грушевського, 6; Київ, 01001
+                  тел. +38 (044) 278-13-57
+                  факс +38 (044) 278-74-54
+                  e-mail: info@namu.kiev.ua
+                </div>
+              </div>
+            </div>
+
+            <a href="#" class="footer__arrow-link">
+              <div class="footer__arrow"></div>
+            </a>
+          </div>
+
+          <div class="footer__aboutus">
+            <div class="footer__aboutus-links">
+              <a href="#gallery" class="footer__aboutus-link">Галерея</a>
+              <a href="#subscribe" class="footer__aboutus-link">Про Нас</a>
+              <a href="#podii" class="footer__aboutus-link">Виставки та події</a>
+              <a href="#contactus" class="footer__aboutus-link">Контакти</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="footer__type">
+          <div class="footer__design">
+            Designed by Zhyriada Marina
+          </div>
+
+          <div class="footer__copy">
+            Copyright © 2019. All Rights Reserved.
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
