add hovers for all links

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
   </head>
   <body class="page__body">
     <header class="header">
-      <div  class="header__img-box">
+      <div class="header__img-box">
         <img 
           src="./images/header/logo-NAMU.svg" 
           alt="logo" 
@@ -53,7 +53,7 @@
                 grid__item--tablet-1-3
                 grid__item--desktop-3-5"
             >
-              <a href="#" class="header__button">
+              <a href="#contact" class="header__button">
                 КВИТКИ
                 <div class="header__btn-img-box">
                   <img 
@@ -376,10 +376,11 @@
 
               <form 
                 action="#" 
-                method="#"
+                method="get"
+                id="form1"
                 class="subscrib__input-box"
               >
-                <label for="#email" class="subscrib__input-box">
+                <label for="email" class="subscrib__input-box">
                   <input 
                     id="email"
                     type="email" 
@@ -394,6 +395,7 @@
                 <button 
                   type="submit"
                   href="#"
+                  form="form1"
                   class="subscrib__button"
                 ></button>
               </form>
@@ -414,11 +416,13 @@
                 grid__item--desktop-1-1"
             >
               <div class="footer__logo-link-box">
-                <img 
-                  src="./images/header/logo-NAMU.svg" 
-                  alt="logo-NAMU" 
-                  class="footer__logo"
-                >
+                <a href="#" class="footer__logo-box">
+                  <img 
+                    src="./images/header/logo-NAMU.svg" 
+                    alt="logo-NAMU" 
+                    class="footer__logo"
+                  >
+                </a>
 
                 <div class="footer__link-box">
                   <a 
@@ -455,25 +459,30 @@
                 grid__item--desktop-3-4"
             >
               <div class="footer__work-time">
-                <p class="footer__text footer__text--title">
+                <p 
+                  class="
+                    footer__text 
+                    footer__text--title
+                    footer__text--bold"
+                >
                   Графік роботи
                 </p>
 
                 <p class="footer__text">
-                  12:00— 20:00 середа
-                  <br>
-                  12:00— 20:00  четвер
-                  <br>
-                  12:00— 20:00 п’ятниця
-                  <br>
-                  11:00 — 19:00 субота
-                  <br>
-                  11:00 — 19:00 неділя
+                  12:00 — 20:00 середа
                   <br><br>
-                  Вихідні: понеділок, вівторок
-                  <br>
+                  12:00 — 20:00  четвер
+                  <br><br>
+                  12:00 — 20:00 п’ятниця
+                  <br><br>
+                  11:00 — 19:00 субота
+                  <br><br>
+                  11:00 — 19:00 неділя
+                  <br><br><br>
+                  <span class="footer__text--bold">Вихідні:</span> понеділок, вівторок
+                  <br><br>
                   Каса припиняє роботу за 1 годину
-                  <br>
+                  <br><br>
                   до закриття музею
                 </p>
               </div>
@@ -486,19 +495,50 @@
                 grid__item--desktop-5-6"
             >
               <div class="footer__contacts">
-                <p class="footer__text footer__text--title">
+                <p 
+                  class="
+                    footer__text 
+                    footer__text--title
+                    footer__text--bold"
+                >
                   Контакти:
                 </p>
 
-                <p class="footer__text">
+                <a 
+                  href="https://goo.gl/maps/BwoRhQukqefAQboQA" 
+                  class="
+                    footer__text 
+                    footer__text--location"
+                >
                   вул. М. Грушевського, 6; Київ, 01001
-                  <br>
+                </a>
+
+                <a 
+                  href="tel:+38 (044) 278-13-57" 
+                  class="
+                    footer__text 
+                    footer__text--location"
+                >
                   тел. +38 (044) 278-13-57
-                  <br>
+                </a>
+
+                <a 
+                  href="tel:+38 (044) 278-74-54" 
+                  class="
+                    footer__text 
+                    footer__text--location"
+                >
                   факс +38 (044) 278-74-54
-                  <br>
+                </a>
+
+                <a 
+                  href="mailto: info@namu.kiev.ua" 
+                  class="
+                    footer__text 
+                    footer__text--location"
+                >
                   e-mail: info@namu.kiev.ua
-                </p>
+                </a>
               </div>
             </div>
 
