--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,377 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+  <head class="page">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
-    <link rel="stylesheet" href="./styles/main.scss">
+    <meta name="viewport"
+      content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon"
+      href="images/favicon.png"
+      type="image/x-icon">
+    <link rel="preconnect"
+      href="https://fonts.googleapis.com">
+    <link rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;
+          400;500;600;700&family=Montserrat:wght@400;700&display=swap"
+      rel="stylesheet">
+
+    <link rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css">
+    <link rel="stylesheet"
+      href="./styles/main.scss">
+
+
+    <title>Museum</title>
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+
+  <body class="page__body"
+    id="body">
+    <div class="out">
+      <div class="in">
+        <div class="container-menu in"
+          id="menu">
+          <div class="menu-box">
+            <nav class="menu">
+              <a href="#body"
+                class="close">
+              </a>
+              <div class="menu__list">
+                <div class="menu__item">
+                  <a href="#gallery"
+                    class="menu__link">Галерея
+                  </a>
+                </div>
+                <div class="menu__item">
+                  <a href="#about"
+                    class="menu__link">Про Нас
+                  </a>
+                </div>
+                <div class="menu__item">
+                  <a href="#events"
+                    class="menu__link">Виставки та події
+                  </a>
+                </div>
+                <div class="menu__item">
+                  <a href="#contacts"
+                    class="menu__link">Контакти
+                  </a>
+                </div>
+              </div>
+            </nav>
+            <div class="schedule">
+              <p class="schedule__list">
+                Графік роботи <br><br>
+                <span>12:00 — 20:00</span> середа <br>
+                <span>12:00 — 20:00</span> четвер <br>
+                <span>12:00 — 20:00</span> п’ятниця <br>
+                <span>11:00 — 19:00</span> субота <br>
+                <span>11:00 — 19:00</span> неділя
+              </p>
+              <p class="schedule__exeptions">
+                <br><br>
+                <span>Вихідні:</span> понеділок, вівторок
+                Каса припиняє роботу за 1 годину
+                до закриття музею
+              </p>
+            </div>
+          </div>
+        </div>
+        <header class="header">
+          <div class="header__info-block">
+            <a href="#menu"
+              class="burger"></a>
+            <h1 class="header__title">Художній музей</h1>
+            <div class="header__tickets">
+              <a href="#events"
+                class="header__button">квитки</a>
+              <a href="#events"
+                class="header__arrow arrow"></a>
+            </div>
+            <a href="#events"
+              class="header__event">ПОДІЇ</a>
+          </div>
+          <div class="header__image-block">
+            <a href="#body"
+              class="logo">
+              <img src="images/logo.png"
+                alt="image">
+            </a>
+          </div>
+        </header>
+      </div>
+    </div>
+
+    <div class="out">
+      <div class="in">
+        <div class="event"
+          id="events">
+          <h2 class="event__title">Актуальні події</h2>
+
+          <div class="event__container">
+            <div class="event__image-block">
+              <img class="event__img"
+                src="images/events/events-1.jpg"
+                alt="image">
+            </div>
+            <div class="event__description description">
+              <span class="description__announcement">ВИСТАВКА</span>
+              <span class="description__date">26.08-29.11.2019</span>
+              <h3 class="description__title">Йду і повертаюсь</h3>
+              <p class="description__text">Національний Художній Музей України
+                презентує унікальну частину колекції Градобанку - українське
+                мистецтво другої половини 1980-1995 років.
+              </p>
+            </div>
+          </div>
+
+          <div class="event__container">
+            <div class="event__image-block">
+              <img class="event__img"
+                src="images/events/events-2.jpg"
+                alt="image">
+            </div>
+            <div class="event__description description">
+              <span class="description__announcement">ВИСТАВКА</span>
+              <span class="description__date">26.08-29.11.2019</span>
+              <h3 class="description__title">І спогади і мрії</h3>
+              <p class="description__text">Національний художній музей України до
+                100 річчя від дня народження видатної української художниці Тетяни
+                Яблонської відкриває ретроспективну ювілейну виставку «І спогади і
+                мрії».
+              </p>
+            </div>
+          </div>
+
+          <div class="event__container">
+            <div class="event__image-block">
+              <img class="event__img"
+                src="images/events/events-3.jpg"
+                alt="image">
+            </div>
+            <div class="container-description">
+              <div class="event__description description">
+                <span class="description__announcement">ЛЕКЦІЯ</span>
+                <span class="description__date">26.08.2019 - 11:00</span>
+                <h3 class="description__title">Від класицизму до романтизму</h3>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+
+    <div class="out">
+      <div class="in gallery"
+        id="gallery">
+        <h2 class="gallery__title">Галерея</h2>
+        <div class="gallery__album">
+
+          <div class="gallery__img-box">
+            <img src="images/gallery/gallery-1.jpg"
+              alt="image"
+              class="gallery__img">
+          </div>
+
+          <div class="gallery__img-box">
+            <img src="images/gallery/gallery-2.jpg"
+              alt="image"
+              class="gallery__img">
+          </div>
+
+          <div class="gallery__img-box">
+            <img src="images/gallery/gallery-3.jpg"
+              alt="image"
+              class="gallery__img">
+          </div>
+
+          <div class="gallery__img-box">
+            <img src="images/gallery/gallery-4.jpg"
+              alt="image"
+              class="gallery__img">
+          </div>
+        </div>
+
+        <!-- Slider main container -->
+        <div class="swiper">
+          <!-- Additional required wrapper -->
+          <div class="swiper-wrapper">
+            <!-- Slides -->
+            <div class="swiper-slide">
+              <img class="swiper-img"
+                src="images/gallery/gallery-1.jpg"
+                alt="image">
+            </div>
+
+            <div class="swiper-slide">
+              <img class="swiper-img"
+                src="images/gallery/gallery-2.jpg"
+                alt="image">
+            </div>
+
+            <div class="swiper-slide">
+              <img class="swiper-img"
+                src="images/gallery/gallery-3.jpg"
+                alt="image">
+            </div>
+
+            <div class="swiper-slide">
+              <img class="swiper-img"
+                src="images/gallery/gallery-4.jpg"
+                alt="image">
+            </div>
+
+          </div>
+          <!-- If we need pagination -->
+          <div class="swiper-pagination"></div>
+
+          <!-- If we need navigation buttons -->
+          <!-- <div class="swiper-button-prev"></div>
+              <div class="swiper-button-next"></div> -->
+
+          <!-- If we need scrollbar -->
+          <!-- <div class="swiper-scrollbar"></div> -->
+        </div>
+      </div>
+    </div>
+
+    <div class="out out-follow"
+      id="about">
+      <div class="in">
+        <div class="follow">
+          <h2 class="follow__title">Підписка</h2>
+          <p class="follow__text">Бути в курсі всіх актуальних подій та останніх
+            новин.
+          </p>
+          <form action="#"
+            method="post"
+            class="follow__form">
+            <input class="follow__email"
+              type="email"
+              name="follow-mail"
+              placeholder="E-mail"
+              required>
+            <button class="follow__button"
+              type="submit"></button>
+          </form>
+        </div>
+      </div>
+    </div>
+
+    <div class="out">
+      <div class="in">
+        <footer class="footer">
+          <div class="footer__social">
+            <a href="#body"
+              class="footer__logo"></a>
+            <a href="https://www.facebook.com"
+              class="footer__social-icon"
+              target="_blank"></a>
+            <a href="https://www.instagram.com"
+              class="footer__social-icon"
+              target="_blank"></a>
+          </div>
+
+          <div class="footer__schedule">
+            <div class="schedule__list">
+              Графік роботи <br><br>
+              <p><span>12:00 — 20:00</span> середа</p>
+              <p><span>12:00 — 20:00</span> четвер</p>
+              <p><span>12:00 — 20:00</span> п’ятниця</p>
+              <p><span>11:00 — 19:00</span> субота</p>
+              <p><span>11:00 — 19:00</span> неділя</p>
+            </div>
+            <p class="schedule__exeptions">
+              <br><br>
+              <span>Вихідні:</span> понеділок, вівторок
+              Каса припиняє роботу за 1 годину
+              до закриття музею
+            </p>
+          </div>
+
+          <div class="footer__contact"
+            id="contacts">
+            <h3 class="footer__title">Контакти:</h3>
+            <a href="https://goo.gl/maps/oTrAjc5Hxp9a6ord7"
+              class="footer__adress footer__link">вул. М. Грушевського, 6; Київ,
+              01001
+            </a>
+            <a href="tel:+380442781357"
+              class="footer__tel footer__link">тел. +38 (044) 278-13-57</a>
+            <a href="tel:+380442787454"
+              class="footer__fax footer__link">факс +38 (044) 278-74-54</a>
+            <a href="mailto:info@namu.kiev.ua"
+              class="footer__mail footer__link">e-mail: info@namu.kiev.ua</a>
+          </div>
+
+          <nav class="menu footer__menu">
+            <a href="#body"
+              class="close">
+            </a>
+            <div class="menu__list">
+              <div class="menu__item">
+                <a href="#gallery"
+                  class="menu__link">Галерея
+                </a>
+              </div>
+              <div class="menu__item">
+                <a href="#about"
+                  class="menu__link">Про Нас
+                </a>
+              </div>
+              <div class="menu__item">
+                <a href="#events"
+                  class="menu__link">Виставки та події
+                </a>
+              </div>
+              <div class="menu__item">
+                <a href="#contacts"
+                  class="menu__link">Контакти
+                </a>
+              </div>
+            </div>
+          </nav>
+
+          <div class="footer__copyright">
+            <span>Copyright © 2019. All Rights Reserved.</span>
+            <span>Designed by Zhyriada Marina</span>
+          </div>
+        </footer>
+      </div>
+    </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+    <script
+      src="scripts/main.js"></script>
+    </script>
+    <script type="module">
+      import Swiper from 'https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.esm.browser.min.js'
+      const swiper = new Swiper('.swiper', {
+        direction: 'horizontal',
+        loop: true,
+        grabCursor: true,
+        slidesPerView: 1.1,
+        spaceBetween: 16,
+        zoom: {
+          maxRatio: 5,
+        },
+        breakpoints: {
+          460: {
+            slidesPerView: 2.1,
+            spaceBetween: 20,
+          },
+        },
+        autoplay: {
+          delay: 2500,
+        },
+        pagination: {
+          el: '.swiper-pagination',
+          clickable: true,
+        },
+      });
+    </script>
   </body>
+
 </html>
