--- a/src/index.html
+++ b/src/index.html
@@ -299,11 +299,14 @@
               01001
             </a>
             <a href="tel:+380442781357"
-              class="footer__tel footer__link">тел. +38 (044) 278-13-57</a>
+              class="footer__tel footer__link"
+              target="_blank">тел. +38 (044) 278-13-57</a>
             <a href="tel:+380442787454"
-              class="footer__fax footer__link">факс +38 (044) 278-74-54</a>
+              class="footer__fax footer__link"
+              target="_blank">факс +38 (044) 278-74-54</a>
             <a href="mailto:info@namu.kiev.ua"
-              class="footer__mail footer__link">e-mail: info@namu.kiev.ua</a>
+              class="footer__mail footer__link"
+              target="_blank">e-mail: info@namu.kiev.ua</a>
           </div>
 
           <nav class="menu footer__menu">
