--- a/src/index.html
+++ b/src/index.html
@@ -295,7 +295,8 @@
             id="contacts">
             <h3 class="footer__title">Контакти:</h3>
             <a href="https://goo.gl/maps/oTrAjc5Hxp9a6ord7"
-              class="footer__adress footer__link">вул. М. Грушевського, 6; Київ,
+              class="footer__adress footer__link"
+              target="_blank">вул. М. Грушевського, 6; Київ,
               01001
             </a>
             <a href="tel:+380442781357"
