add description to images

--- a/src/index.html
+++ b/src/index.html
@@ -110,10 +110,12 @@
           <h2 class="event__title">Актуальні події</h2>
 
           <div class="event__container">
-            <div class="event__image-block">
+            <div class="event__image-block"
+            data-author="Васильковський
+            Сергій Іванович Кримський берег 1890-е">
               <img class="event__img"
                 src="images/events/events-1.jpg"
-                alt="image">
+                alt="Кримський берег 1890-е">
             </div>
             <div class="event__description description">
               <span class="description__announcement">ВИСТАВКА</span>
@@ -127,10 +129,11 @@
           </div>
 
           <div class="event__container">
-            <div class="event__image-block">
+            <div class="event__image-block"
+            data-author="Петро Іванович Холодний Казка про дівчинку та павлина">
               <img class="event__img"
                 src="images/events/events-2.jpg"
-                alt="image">
+                alt="Казка про дівчинку та павлина">
             </div>
             <div class="event__description description">
               <span class="description__announcement">ВИСТАВКА</span>
@@ -145,7 +148,8 @@
           </div>
 
           <div class="event__container">
-            <div class="event__image-block">
+            <div class="event__image-block"
+            data-author="Васильковський Сергій Іванович Закат над озером Ок. 1900">
               <img class="event__img"
                 src="images/events/events-3.jpg"
                 alt="image">
@@ -169,25 +173,29 @@
         <h2 class="gallery__title">Галерея</h2>
         <div class="gallery__album">
 
-          <div class="gallery__img-box">
+          <div class="gallery__img-box"
+          data-author="Кричевский Федор Григорьевич. Нaречена">
             <img src="images/gallery/gallery-1.jpg"
               alt="image"
               class="gallery__img">
           </div>
 
-          <div class="gallery__img-box">
+          <div class="gallery__img-box"
+          data-author="Левченко Петро Олексійович Глухомань">
             <img src="images/gallery/gallery-2.jpg"
               alt="image"
               class="gallery__img">
           </div>
 
-          <div class="gallery__img-box">
+          <div class="gallery__img-box"
+          data-author="Этюд Солнечный день Кіріак Константинович Костанді">
             <img src="images/gallery/gallery-3.jpg"
               alt="image"
               class="gallery__img">
           </div>
 
-          <div class="gallery__img-box">
+          <div class="gallery__img-box"
+          data-author="Микола Глущенко. На морі. 1970.">
             <img src="images/gallery/gallery-4.jpg"
               alt="image"
               class="gallery__img">
@@ -199,25 +207,29 @@
           <!-- Additional required wrapper -->
           <div class="swiper-wrapper">
             <!-- Slides -->
-            <div class="swiper-slide">
+            <div class="swiper-slide"
+            data-author="Кричевский Федор Григорьевич. Нaречена">
               <img class="swiper-img"
                 src="images/gallery/gallery-1.jpg"
                 alt="image">
             </div>
 
-            <div class="swiper-slide">
+            <div class="swiper-slide"
+            data-author="Левченко Петро Олексійович Глухомань">
               <img class="swiper-img"
                 src="images/gallery/gallery-2.jpg"
                 alt="image">
             </div>
 
-            <div class="swiper-slide">
+            <div class="swiper-slide"
+            data-author="Этюд Солнечный день Кіріак Константинович Костанді">
               <img class="swiper-img"
                 src="images/gallery/gallery-3.jpg"
                 alt="image">
             </div>
 
-            <div class="swiper-slide">
+            <div class="swiper-slide"
+            data-author="Микола Глущенко. На морі. 1970.">
               <img class="swiper-img"
                 src="images/gallery/gallery-4.jpg"
                 alt="image">
