fix logo hover and text

--- a/src/index.html
+++ b/src/index.html
@@ -506,11 +506,14 @@
 
                 <a 
                   href="https://goo.gl/maps/BwoRhQukqefAQboQA" 
+                  target="_blank"
                   class="
                     footer__text 
                     footer__text--location"
                 >
-                  вул. М. Грушевського, 6; Київ, 01001
+                  вул. М. Грушевського, 6; 
+                  <br>
+                  Київ, 01001
                 </a>
 
                 <a 
