--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
-    <link rel="icon" href="./images/logo/NA MUlogo.png">
+    <link rel="icon" href="./images/logo/NA MUlogo.svg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -27,7 +27,7 @@
             <a href="#" class="logo">
               <img 
                 class="logo__image"
-                src="./images/logo/NA MUlogo.png" 
+                src="./images/logo/NA MUlogo.svg" 
                 alt="Museum logo">
             </a>
           </div>
@@ -270,7 +270,7 @@
               <a href="#" class="footer__logo">
                 <img
                   class="footer__logo-image"
-                  src="./images/logo/NA MUlogo.png"
+                  src="./images/logo/NA MUlogo.svg"
                   alt="Museum logo">
               </a>
               <div class="footer__icons">
