--- a/src/index.html
+++ b/src/index.html
@@ -308,10 +308,20 @@
               <div class="footer__contacts">
                 <div class="footer__contacts-title">Контакти:</div>
 
-                <div class="footer__contacts-text">вул. М. Грушевського, 6; Київ, 01001
-                  тел. +38 (044) 278-13-57
-                  факс +38 (044) 278-74-54
-                  e-mail: info@namu.kiev.ua
+                <div class="footer__contacts-text">
+                  вул. М. Грушевського, 6; Київ, 01001
+                  <br>
+                  <a href="tel:+38 (044) 278-13-57" class="footer__contacts-link">
+                    тел. +38 (044) 278-13-57
+                  </a>
+                  <br>
+                  <a href="tel:+38 (044) 278-13-57" class="footer__contacts-link">
+                    факс +38 (044) 278-74-54
+                  </a>
+                  <br>
+                  <a href="mailto:info@namu.kiev.ua" class="footer__contacts-link">
+                    e-mail: info@namu.kiev.ua
+                  </a>
                 </div>
               </div>
             </div>
