restyle description, change copyrate date

--- a/src/index.html
+++ b/src/index.html
@@ -111,8 +111,7 @@
 
           <div class="event__container">
             <div class="event__image-block"
-            data-author="Васильковський
-            Сергій Іванович Кримський берег 1890-е">
+            data-author="Васильковський Сергій Іванович «Кримський берег» 1890-е">
               <img class="event__img"
                 src="images/events/events-1.jpg"
                 alt="Кримський берег 1890-е">
@@ -130,7 +129,7 @@
 
           <div class="event__container">
             <div class="event__image-block"
-            data-author="Петро Іванович Холодний Казка про дівчинку та павлина">
+            data-author="Петро Іванович Холодний «Казка про дівчинку та павлина»">
               <img class="event__img"
                 src="images/events/events-2.jpg"
                 alt="Казка про дівчинку та павлина">
@@ -149,7 +148,7 @@
 
           <div class="event__container">
             <div class="event__image-block"
-            data-author="Васильковський Сергій Іванович Закат над озером Ок. 1900">
+            data-author="Васильковський Сергій Іванович «Закат над озером» 1900p.">
               <img class="event__img"
                 src="images/events/events-3.jpg"
                 alt="image">
@@ -174,28 +173,28 @@
         <div class="gallery__album">
 
           <div class="gallery__img-box"
-          data-author="Кричевский Федор Григорьевич. Нaречена">
+          data-author="Кричевский Федор Григорьевич «Нaречена»">
             <img src="images/gallery/gallery-1.jpg"
               alt="image"
               class="gallery__img">
           </div>
 
           <div class="gallery__img-box"
-          data-author="Левченко Петро Олексійович Глухомань">
+          data-author="Левченко Петро Олексійович «Глухомань»">
             <img src="images/gallery/gallery-2.jpg"
               alt="image"
               class="gallery__img">
           </div>
 
           <div class="gallery__img-box"
-          data-author="Этюд Солнечный день Кіріак Константинович Костанді">
+          data-author="Кіріак Константинович Костанді «Сонечний день»">
             <img src="images/gallery/gallery-3.jpg"
               alt="image"
               class="gallery__img">
           </div>
 
           <div class="gallery__img-box"
-          data-author="Микола Глущенко. На морі. 1970.">
+          data-author="Микола Глущенко «На морі» 1970р.">
             <img src="images/gallery/gallery-4.jpg"
               alt="image"
               class="gallery__img">
@@ -208,28 +207,28 @@
           <div class="swiper-wrapper">
             <!-- Slides -->
             <div class="swiper-slide"
-            data-author="Кричевский Федор Григорьевич. Нaречена">
+            data-author="Кричевский Федор Григорьевич «Нaречена">
               <img class="swiper-img"
                 src="images/gallery/gallery-1.jpg"
                 alt="image">
             </div>
 
             <div class="swiper-slide"
-            data-author="Левченко Петро Олексійович Глухомань">
+            data-author="Левченко Петро Олексійович «Глухомань»">
               <img class="swiper-img"
                 src="images/gallery/gallery-2.jpg"
                 alt="image">
             </div>
 
             <div class="swiper-slide"
-            data-author="Этюд Солнечный день Кіріак Константинович Костанді">
+            data-author="Кіріак Константинович Костанді «Сонечний день»">
               <img class="swiper-img"
                 src="images/gallery/gallery-3.jpg"
                 alt="image">
             </div>
 
             <div class="swiper-slide"
-            data-author="Микола Глущенко. На морі. 1970.">
+            data-author="Микола Глущенко «На морі» 1970р.">
               <img class="swiper-img"
                 src="images/gallery/gallery-4.jpg"
                 alt="image">
@@ -351,7 +350,7 @@
           </nav>
 
           <div class="footer__copyright">
-            <span>Copyright © 2019. All Rights Reserved.</span>
+            <span>Copyright © 2022. All Rights Reserved.</span>
             <span>Designed by Zhyriada Marina</span>
           </div>
         </footer>
