--- a/src/index.html
+++ b/src/index.html
@@ -40,15 +40,13 @@
         </h1>
 
         <div class="header__ticket-box">
-          <div class="header__ticket-box--text">
-            КВИТКИ
-          </div>
-
           <a 
             href="https://uk-ua.facebook.com/namu.museum/" 
             class="header__ticket-box--link"
             target="_blank"
-          ></a>
+          >
+            КВИТКИ
+          </a>
         </div>
 
         <div class="header__decoration">
@@ -326,10 +324,31 @@
             </h4>
 
             <div class="footer__contacts--addresses">
-              вул. М. Грушевського, 6; Київ, 01001<br>
-              тел.&nbsp;+38&nbsp;(044) 278&#8209;13&#8209;57<br>
-              факс&nbsp;+38&nbsp;(044) 278&#8209;74&#8209;54<br>
-              e&#8209;mail: info@namu.kiev.ua
+              <a 
+                class="footer__contacts--addresses" 
+                href="http://goo.gl/maps/BCXVj9VrKofdFYz89" 
+                target="_blank"
+              >
+                вул. М. Грушевського, 6; Київ, 01001
+              </a><br>
+
+              <a 
+                class="footer__contacts--addresses"
+                href="tel:+38 (044) 2781357"
+              >
+                тел.&nbsp;+38&nbsp;(044) 278&#8209;13&#8209;57
+              </a><br>
+
+              <a 
+                class="footer__contacts--addresses"
+                href="tel:+38 (044) 2781357"
+              >
+                факс&nbsp;+38&nbsp;(044) 278&#8209;74&#8209;54
+              </a><br>
+
+              <a href="mailto:info@namu.kiev.ua" class="footer__contacts--addresses">
+                e&#8209;mail: info@namu.kiev.ua
+              </a>
             </div>
           </div>
 
@@ -340,7 +359,7 @@
               viewBox="0 0 10 12" 
               fill="#1a5a4c" 
               xmlns="http://www.w3.org/2000/svg"
-              class="footer__home-arrow--svg"
+              class="footer__home-arrow--svg logo"
             >
               <path d="M5 0L0 5L0.705 5.705L4.5 1.915V12H5.5V1.915L9.295 5.705L10 5L5 0Z">
             </svg>
@@ -369,7 +388,7 @@
             </div>
 
             <div class="footer__designed-by--item">
-              Copyright © 2019. All Rights Reserved.
+              Copyright © 2022. All Rights Reserved.
             </div>
           </div>
         </div>
