--- a/src/index.html
+++ b/src/index.html
@@ -309,7 +309,10 @@
                 <div class="footer__contacts-title">Контакти:</div>
 
                 <div class="footer__contacts-text">
-                  вул. М. Грушевського, 6; Київ, 01001
+                  <a href="https://goo.gl/maps/VYU5PkgFQmLUNfPw9" class="footer__contacts-link"
+                  target="_blank">
+                    вул. М. Грушевського, 6; Київ, 01001
+                  </a>
                   <br>
                   <a href="tel:+38 (044) 278-13-57" class="footer__contacts-link">
                     тел. +38 (044) 278-13-57
@@ -347,7 +350,7 @@
           </div>
 
           <div class="footer__copy">
-            Copyright © 2019. All Rights Reserved.
+            Copyright © 2022. All Rights Reserved.
           </div>
         </div>
       </div>
