museum_next_commit-2

--- a/src/index.html
+++ b/src/index.html
@@ -15,51 +15,37 @@
   </head>
   <body class="page__body">
     <header class="header">
-      <div class="header__menu">
-        <a href="#nav" class="header__nav">
-          <img src="./images/burger.svg" alt="menu">
-        </a>
-        <a
-          href="#"
-          class="logo header__logo">
-          NA
-          <br>
-          MU
-        </a>
-        <span></span>
-      </div>
-      <div class="header__content">
-        <a
-          href="#nav"
-          class="header__nav header__nav--burger"
-          hidden
-        >
-          <img src="./images/burger.svg" alt="menu">
-        </a>
-        <h1 class="header__title">
-          ХУДОЖНІЙ МУЗЕЙ
-        </h1>
-        <div class="header__event" hidden>
-          <a href="#events" class="header__event-link">
-            ПОДІЇ
+      <div class="header__container">
+        <div class="header__nav">
+          <a href="#nav">
+            <div class="header__nav-opener"></div>
           </a>
+          <div class="header__logo"></div>
         </div>
-        <div class="button">
-          <button class="button__box">
-            <a
-              href="https://kyiv-online.net/places/museum/natsionalnyj-hudozhnij-muzej-ukrajiny/" class="button__text"
-              target="_blank"
-            >
-              КВИТКИ
+        <div class="header__block">
+          <div class="header__image"></div>
+          <div class="header__content">
+            <h1 class="header__title">
+              ХУДОЖНІЙ МУЗЕЙ
+            </h1>
+            <div class="header__subtitle">
+              ПОДІЇ
+            </div>
+            <a href="https://kyiv-online.net/places/museum/natsionalnyj-hudozhnij-muzej-ukrajiny/" 
+            target="_blank"
+            class="button header__button">
+              <button class="button__box">
+                  КВИТКИ
+              </button>
+              <button class="button__angle">
+                <img
+                  src="./images/angleWhite.svg"
+                  alt="Angle"
+                  class="button__angle-hover"
+                >
+              </button>
             </a>
-          </button>
-          <button class="button__angle">
-            <img
-              src="./images/angleWhite.svg"
-              alt="Angle"
-              class="button__angle-hover"
-            >
-          </button>
+          </div>
         </div>
       </div>
     </header>
@@ -245,7 +231,7 @@
                 <div class="gallery__toggle-button"></div>
               </label>
               <label 
-                for="image-2" class="galleryr__toggle-block"
+                for="image-2" class="gallery__toggle-block"
               >
                 <input 
                   type="radio"
@@ -287,7 +273,7 @@
           </div>
 
           <div class="gallery__paintings-desktop">
-            <div class="gallery_images--desktop grid">
+            <div class="gallery_images--desktop grid grid--desktop">
               <img
                 src="./images/brideDesk.png"
                 alt="Bride"
