Gallery section with swiper was added

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" class="page">
-  <head>
+  <link>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Національний художній музей</title>
@@ -11,14 +11,17 @@
     >
 
     <link rel="stylesheet" href="./styles/main.scss">
+    <script src="./scripts/main.js" defer></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+
     <link
-      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:
-      wght@300;400;500;700&family=Montserrat:wght@400;700&display=swap"
       rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
     >
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
   </head>
   <body class="page__body">
     <header class="page__header header">
@@ -208,6 +211,89 @@
             Від класицизму до романтизму
           </h3>
         </article>
+      </section>
+
+      <section class="page__section gallery">
+        <div class="grid">
+          <h2 class="gallery__title">
+            Галерея
+          </h2>
+        </div>
+
+        <div class="gallery__grid grid">
+          <div class="gallery__image-box gallery__image-box--1">
+            <img
+              src="./images/gallery-painting-1.jpg"
+              alt="Painting 1"
+              class="gallery__image"
+            >
+          </div>
+          <div class="gallery__image-box gallery__image-box--2">
+            <img
+              src="./images/gallery-painting-2.jpg"
+              alt="Painting 2"
+              class="gallery__image"
+            >
+          </div>
+          <div class="gallery__image-box gallery__image-box--3">
+            <img
+              src="./images/gallery-painting-3.jpg"
+              alt="Painting 3"
+              class="gallery__image"
+            >
+          </div>
+          <div class="gallery__image-box gallery__image-box--4">
+            <img
+              src="./images/gallery-painting-4.jpg"
+              alt="Painting 4"
+              class="gallery__image"
+            >
+          </div>
+        </div>
+
+        <div class="grid">
+          <div class="swiper gallery__swiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide gallery__swiper-slide">
+                <img
+                  src="./images/gallery-painting-1.jpg"
+                  alt="Painting 1"
+                  class="gallery__image"
+                >
+              </div>
+              <div class="swiper-slide gallery__swiper-slide">
+                <img
+                  src="./images/gallery-painting-1-1.jpg"
+                  alt="Painting 1-1"
+                  class="gallery__image"
+                >
+              </div>
+              <div class="swiper-slide gallery__swiper-slide">
+                <img
+                  src="./images/gallery-painting-2.jpg"
+                  alt="Painting 2"
+                  class="gallery__image"
+                >
+              </div>
+              <div class="swiper-slide gallery__swiper-slide">
+                <img
+                  src="./images/gallery-painting-3.jpg"
+                  alt="Painting 3"
+                  class="gallery__image"
+                >
+              </div>
+              <div class="swiper-slide gallery__swiper-slide">
+                <img
+                  src="./images/gallery-painting-4.jpg"
+                  alt="Painting 4"
+                  class="gallery__image"
+                >
+              </div>
+            </div>
+
+            <div class="swiper-pagination"></div>
+          </div>
+        </div>
       </section>
     </main>
 
